# deep-astra-archive

./: README.md  pyproject.toml
app/files/: faces.json
app/handler/: face_processor.py
app/model/: face_processor.py
cfg/dev/: uvicorn.json
