[tool.poetry]
name = "deep-astra"
version = "0.1.0"
description = "Self hosted AI services."
authors = ["Srikanth Srungarapu <srikanth@crowdshakti.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "8.0.1"
colorama = "0.4.4"
h11 = "0.12.0"
pydantic = "1.8.2"
python-dotenv = "0.19.0"
python-multipart = "0.0.5"
six = "1.16.0"
typing-extensions = "3.10.0.0"
uvicorn = "0.14.0"
websockets = "9.1"
starlette = "0.16.0"
fastapi = "^0.70.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.87.1"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
